fix form. Vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -593,6 +593,9 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .wrapper {
@@ -626,4 +629,3 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-/*# sourceMappingURL=style.css.map */
