--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -76,4 +76,5 @@
 .form__content {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
